Solving issues with java 9+ modules